# ai-company-simulator

./: Dockerfile  README.md  app.py  environment.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
